Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/8131742/T8131742.out
T8131742.java:8:39: compiler.err.this.as.identifier
1 error
